--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:orientation="vertical"
-    android:gravity="center">
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/question_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/question_text"
-        android:padding="24dp"/>
+        android:layout_gravity="center_horizontal"
+        android:padding="24dp"
+        android:text="@string/question_text" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal"
         android:orientation="horizontal">
 
         <Button
@@ -34,22 +35,23 @@
             android:layout_weight="1"
             android:text="@string/false_button" />
     </LinearLayout>
-    <LinearLayout
+
+
+    <Button
+        android:id="@+id/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_gravity="bottom|right"
+        android:drawablePadding="4dp"
+        android:text="@string/next_question_button" />
 
-        <Button
-            android:id="@+id/prev_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/prev_question_button" />
-
-        <Button
-            android:id="@+id/next_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/next_question_button" />
-    </LinearLayout>
-</LinearLayout>
+    <Button
+        android:id="@+id/prev_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_gravity="bottom|left"
+        android:drawablePadding="4dp"
+        android:text="Button"
+        tools:text="@string/prev_question_button" />
+</FrameLayout>
