--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,4 +52,13 @@
             android:layout_weight="1"
             android:text="@string/next_question_button" />
     </LinearLayout>
+
+<!--    Читы -->
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/cheat_button" />
+
+
 </LinearLayout>
