--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -54,4 +54,12 @@
         android:drawablePadding="4dp"
         android:text="Button"
         tools:text="@string/prev_question_button" />
+<!--Читы -->
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:text="@string/cheat_button" />
+
 </FrameLayout>
